--- a/and-bible/app/src/main/res/layout/speak_bookmarks_widget.xml
+++ b/and-bible/app/src/main/res/layout/speak_bookmarks_widget.xml
@@ -1,20 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:background="@color/widget_background"
-				android:padding="@dimen/widget_margin"
+<LinearLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		android:background="@color/widget_background"
+		android:padding="@dimen/widget_margin"
+		android:id="@+id/layout"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="vertical"
+		android:layout_centerVertical="true"
+		android:layout_centerHorizontal="true"
 		>
 
-	<LinearLayout
-			android:id="@+id/layout"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:orientation="vertical"
-			android:layout_centerVertical="true"
-			android:layout_centerHorizontal="true"
-			>
-
-	</LinearLayout>
-
-
-</RelativeLayout>
+</LinearLayout>
