--- a/and-bible/app/src/main/res/layout/speak_widget.xml
+++ b/and-bible/app/src/main/res/layout/speak_widget.xml
@@ -3,6 +3,7 @@
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:background="@color/widget_background"
+				android:id="@+id/layout"
 				android:padding="@dimen/widget_margin"
 		>
 	<ImageView
