--- a/and-bible/app/src/main/res/layout/speak_widget.xml
+++ b/and-bible/app/src/main/res/layout/speak_widget.xml
@@ -13,7 +13,7 @@
 			android:src="@drawable/alarm_enabled"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			/>
+			android:contentDescription="@string/widget_toggle_sleep_timer"/>
 	<LinearLayout
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
