--- a/and-bible/app/src/main/res/xml/speak_widget1_info.xml
+++ b/and-bible/app/src/main/res/xml/speak_widget1_info.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:minWidth="40dp"
+                    android:minWidth="70dp"
                     android:minHeight="60dp"
                     android:updatePeriodMillis="86400000"
-                    android:previewImage="@drawable/ichthys"
+                    android:previewImage="@drawable/speakwidget1"
                     android:initialLayout="@layout/speak_widget"
                     android:resizeMode="horizontal|vertical"
                     android:widgetCategory="home_screen"
