--- a/and-bible/app/src/main/res/layout/speak_bookmarks_widget_button.xml
+++ b/and-bible/app/src/main/res/layout/speak_bookmarks_widget_button.xml
@@ -5,5 +5,5 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/app_name"
-		tools:theme="@android:style/Widget.Material.Light.Button"
-		android:textSize="10sp"/>
+		android:textSize="10sp"
+		/>
