--- a/and-bible/app/src/main/res/layout/speak_widget.xml
+++ b/and-bible/app/src/main/res/layout/speak_widget.xml
@@ -30,7 +30,11 @@
 				android:text="@string/app_name"
 				tools:textSize="14sp"
 				android:textStyle="bold"/>
-
+		<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:id="@+id/smallStatusText"
+				/>
 		<TextView
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
