--- a/and-bible/app/src/main/res/layout/speak_bible.xml
+++ b/and-bible/app/src/main/res/layout/speak_bible.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -293,7 +294,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 >
-
+            <ImageButton
+                    android:id="@+id/bookmarkButton"
+                    app:srcCompat="@drawable/ic_bookmark_24dp"
+                    android:contentDescription="@string/bookmarks"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:onClick="onBookmarkButtonClick"/>
             <ImageButton
                     android:id="@+id/rewindButton"
                     android:src="@android:drawable/ic_media_rew"
