--- a/and-bible/app/src/main/res/xml/speak_text_control_widget_info.xml
+++ b/and-bible/app/src/main/res/xml/speak_text_control_widget_info.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:minWidth="40dp"
-                    android:minHeight="40dp"
+                    android:minWidth="80dp"
+                    android:minHeight="110dp"
                     android:updatePeriodMillis="86400000"
-                    android:previewImage="@drawable/speakwidget1"
+                    android:previewImage="@drawable/speak_text_control_widget"
                     android:initialLayout="@layout/speak_widget"
                     android:resizeMode="horizontal|vertical"
                     android:widgetCategory="home_screen"
-                    >
+        >
 </appwidget-provider>
