--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -95,6 +95,7 @@
 				android:title="@string/prefs_request_sdcard_permission_title"
 				android:summary="@string/prefs_request_sdcard_permission_summary"
 				android:defaultValue="false"/>
+	<!--suppress AndroidDomInspection -->
 	<ListPreference android:key="locale_pref"
 				android:title="@string/prefs_interface_locale_title"
 				android:summary="@string/prefs_interface_locale_summary"
