Add multitranslation setting to SpeakSettings

--- a/app/src/main/res/layout/speak_bible.xml
+++ b/app/src/main/res/layout/speak_bible.xml
@@ -171,6 +171,13 @@
                         android:layout_marginStart="@dimen/speak_row_padding"
                         android:id="@+id/replaceDivineName"
                         android:onClick="onSettingsChange"/>
+                <CheckBox
+                    android:text="@string/conf_speak_multitranslation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/speak_row_padding"
+                    android:id="@+id/multiTranslation"
+                    android:onClick="onSettingsChange"/>
                 <Space
                         android:layout_width="match_parent"
                         android:layout_height="15dip"/>
