--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -92,7 +92,6 @@
 	<color name="yellow_A200">#ffff00</color>
 	<color name="yellow_A400">#ffea00</color>
 	<color name="yellow_A700">#ffd600</color>
-    <color name="speak_subtitle_color">@color/grey_800</color>
-	<color name="speak_title_color">@color/grey_800</color>
+	<color name="speak_status_background">#7eeceff1</color>
 
 </resources>
