--- a/app/src/main/res/layout/speak_bible.xml
+++ b/app/src/main/res/layout/speak_bible.xml
@@ -106,138 +106,50 @@
                                 />
                     </LinearLayout>
                     <SeekBar
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:padding="@dimen/speak_row_padding"
-                            android:id="@+id/speakSpeed"
-                            android:max="300"
-                            android:progress="100"
-                            />
-                </LinearLayout>
-               <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="15dip"/>
-            </LinearLayout>
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:dividerPadding="@dimen/row_divider_padding"
-                    android:showDividers="middle"
-                    >
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="15dip"/>
-                <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        >
-
-                    <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:padding="@dimen/speak_title_padding"
-                            android:textStyle="bold"
-                            android:textSize="@dimen/speak_titles_text_size"
-                            android:text="@string/speak_settings_title"
-                            />
-
-                    <CheckBox
-                            android:text="@string/conf_speak_synchronize"
-                            android:layout_marginStart="@dimen/speak_row_padding"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/synchronize"
-                            android:onClick="onSettingsChange"/>
-                    <CheckBox
-                            android:layout_marginStart="@dimen/speak_row_padding"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/conf_speak_sleep_timer"
-                            android:id="@+id/sleepTimer"
-                            android:onClick="setSleepTime"
-                            />
-                </LinearLayout>
-                <CheckBox
-                        android:text="@string/conf_replace_divinename"
+                        android:padding="@dimen/speak_row_padding"
+                        android:id="@+id/speakSpeed"
+                        android:max="300"
+                        android:progress="100"
+                        />
+                    <Space
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="15dip"/>
+                    <CheckBox
                         android:layout_marginStart="@dimen/speak_row_padding"
-                        android:id="@+id/replaceDivineName"
-                        android:onClick="onSettingsChange"/>
-                <CheckBox
-                    android:text="@string/conf_speak_multitranslation"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/speak_row_padding"
-                    android:id="@+id/multiTranslation"
-                    android:onClick="onSettingsChange"/>
-                <Space
                         android:layout_width="match_parent"
-                        android:layout_height="15dip"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
-                <Space
+                        android:layout_height="wrap_content"
+                        android:text="@string/conf_speak_sleep_timer"
+                        android:id="@+id/sleepTimer"
+                        android:onClick="setSleepTime"
+                        />
+                    <Space
                         android:layout_width="match_parent"
-                        android:layout_height="15dip"/>
-                <RelativeLayout
+                        android:layout_height="30dip"/>
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         >
-
-                    <TextView
+                        <View
+                            android:layout_width="0dip"
+                            android:layout_height="fill_parent"
+                            android:layout_weight="1"/>
+                        <Button
+                            android:id="@+id/speakSettings"
+                            android:contentDescription="@string/bookmarks"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="@dimen/speak_titles_text_size"
-                            android:padding="@dimen/speak_title_padding"
-                            android:layout_alignParentStart="true"
-                            android:textStyle="bold"
-                            android:text="@string/speak_bookmarking_settings_title"
-                            />
-
-                    <ImageButton
-                            android:id="@+id/bookmarkHelpButton"
-                            android:src="@android:drawable/ic_menu_help"
-                            android:contentDescription="@string/speak_bookmark_help"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_alignParentBottom="true"
-                            android:onClick="onHelpButtonClick"
-                            style="@style/Widget.Design.FloatingActionButton"/>
-                </RelativeLayout>
-
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_marginStart="@dimen/speak_row_padding"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        >
-
-                    <CheckBox
-                            android:text="@string/conf_speak_auto_bookmark"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/autoBookmark"
-                            android:onClick="onSettingsChange"/>
-
-                    <CheckBox
-                            android:text="@string/conf_save_playback_settings_to_bookmarks"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/restoreSettingsFromBookmarks"
-                            android:onClick="onSettingsChange"/>
-
+                            android:layout_height="match_parent"
+                            android:text="@string/speak_more_settings"
+                            android:onClick="openMoreSettings"/>
+                        <View
+                            android:layout_width="0dip"
+                            android:layout_height="fill_parent"
+                            android:layout_weight="1"/>
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
-
         </LinearLayout>
     </ScrollView>
 
