Improve speak bible activity layout

--- a/app/src/main/res/layout/speak_bible.xml
+++ b/app/src/main/res/layout/speak_bible.xml
@@ -113,49 +113,57 @@
                         android:max="300"
                         android:progress="100"
                         />
-                    <Space
-                        android:layout_width="match_parent"
-                        android:layout_height="15dip"/>
-                    <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textSize="@dimen/speak_titles_text_size"
-                            android:padding="@dimen/speak_title_padding"
-                            android:textStyle="bold"
-                            android:text="@string/speak_sleep_timer_title"
-                            />
-                    <CheckBox
-                        android:layout_marginStart="@dimen/speak_row_padding"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/conf_speak_sleep_timer"
-                        android:id="@+id/sleepTimer"
-                        android:onClick="setSleepTime"
-                        />
-                    <Space
-                        android:layout_width="match_parent"
-                        android:layout_height="30dip"/>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        >
-                        <View
-                            android:layout_width="0dip"
-                            android:layout_height="fill_parent"
-                            android:layout_weight="1"/>
-                        <Button
-                            android:id="@+id/speakSettings"
-                            android:contentDescription="@string/bookmarks"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="@string/speak_more_settings"
-                            android:onClick="openMoreSettings"/>
-                        <View
-                            android:layout_width="0dip"
-                            android:layout_height="fill_parent"
-                            android:layout_weight="1"/>
-                    </LinearLayout>
+                </LinearLayout>
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="15dip"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="15dip"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/speak_titles_text_size"
+                    android:padding="@dimen/speak_title_padding"
+                    android:textStyle="bold"
+                    android:text="@string/speak_sleep_timer_title"
+                    />
+                <CheckBox
+                    android:layout_marginStart="@dimen/speak_row_padding"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/conf_speak_sleep_timer"
+                    android:id="@+id/sleepTimer"
+                    android:onClick="setSleepTime"
+                    />
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="30dip"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    >
+                    <View
+                        android:layout_width="0dip"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1"/>
+                    <Button
+                        android:id="@+id/speakSettings"
+                        android:contentDescription="@string/bookmarks"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="@string/speak_more_settings"
+                        android:onClick="openMoreSettings"/>
+                    <View
+                        android:layout_width="0dip"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
