--- a/app/src/main/res/layout/list_item_3_highlighted.xml
+++ b/app/src/main/res/layout/list_item_3_highlighted.xml
@@ -18,7 +18,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:orientation="horizontal" >
-
+            <ImageView android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/hearing"
+            />
             <TextView android:id="@+id/text1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
