--- a/app/src/main/res/layout/speak_general.xml
+++ b/app/src/main/res/layout/speak_general.xml
@@ -143,7 +143,8 @@
 			android:layout_height="wrap_content"
 			android:id="@+id/currentLocation"
 			android:layout_below="@+id/leftPanel"
-			android:layout_alignParentStart="true"/>
+			android:layout_alignParentStart="true"
+		android:layout_alignParentLeft="true" />
 
 	<TextView
 			android:layout_width="wrap_content"
@@ -152,6 +153,8 @@
 			android:layout_alignParentStart="true"
 			android:id="@+id/statusText"
 			android:layout_alignBottom="@+id/currentLocation"
-			android:layout_alignParentEnd="true"/>
+			android:layout_alignParentEnd="true"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentRight="true" />
 
 </RelativeLayout>
