--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -4,9 +4,18 @@
  @author Martin Denham [mjdenham at gmail dot com]
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:orientation="horizontal"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent">
+
+	<ImageButton
+		android:id="@+id/homeButton"
+		style="@style/Widget.AppCompat.ActionButton"
+		android:layout_width="wrap_content"
+		android:layout_height="fill_parent"
+		android:contentDescription="@string/menu"
+		app:srcCompat="@drawable/ic_menu" />
 	<LinearLayout android:id="@+id/documentTitleContainer"
               android:layout_width="wrap_content"
               android:layout_height="fill_parent"
