--- a/app/src/main/res/menu/main_bible_drawer_menu.xml
+++ b/app/src/main/res/menu/main_bible_drawer_menu.xml
@@ -18,45 +18,51 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/bookmarksButton"
-        android:title="@string/bookmarks"
-        android:icon="@drawable/ic_collections_bookmark_24dp"
-        />
-
-    <item android:id="@+id/mynotesButton"
-        android:title="@string/mynotes"
-        android:icon="@drawable/ic_pen_24dp"/>
-
-    <item android:id="@+id/searchButton"
-        android:title="@string/search"
-        android:icon="@drawable/ic_search_24dp"
-        />
-
-    <item android:id="@+id/windowSubMenu"
-        android:title="@string/window"
-        android:icon="@android:drawable/ic_menu_slideshow">
+    <item
+        android:title="@string/bible">
         <menu>
-            <!-- window_popup_menu.xml is programatically included here -->
+            <item android:id="@+id/chooceDocumentButton"
+                android:title="@string/chooce_document"
+                android:icon="@drawable/ic_book_white_24dp"
+                />
+
+            <item android:id="@+id/bookmarksButton"
+                android:title="@string/bookmarks"
+                android:icon="@drawable/ic_collections_bookmark_24dp"
+                />
+
+            <item android:id="@+id/mynotesButton"
+                android:title="@string/mynotes"
+                android:icon="@drawable/ic_pen_24dp"/>
+
+            <item android:id="@+id/dailyReadingPlanButton"
+                android:title="@string/rdg_plan_title"
+                android:icon="@android:drawable/ic_menu_month"/>
+
+            <item android:id="@+id/speakButton"
+                android:title="@string/speak"
+                android:icon="@drawable/ic_hearing_24dp"/>
+
+            <item 	android:id="@+id/historyButton"
+                android:title="@string/history"
+                android:icon="@android:drawable/ic_menu_recent_history"/>
         </menu>
     </item>
+    <item
+        android:title="@string/help">
+        <menu>
+            <item android:id="@+id/rateButton"
+                android:title="@string/rate_application"
+                android:icon="@drawable/ic_rate_review_white_24dp"/>
 
-    <item android:id="@+id/dailyReadingPlanButton"
-        android:title="@string/rdg_plan_title"
-        android:icon="@android:drawable/ic_menu_month"/>
-
-    <item android:id="@+id/speakButton"
-        android:title="@string/speak"
-        android:icon="@drawable/ic_hearing_24dp"/>
-
-    <item 	android:id="@+id/historyButton"
-        android:title="@string/history"
-        android:icon="@android:drawable/ic_menu_recent_history"/>
-
-    <item android:id="@+id/adminSubMenu"
+            <item android:id="@+id/helpButton"
+                android:title="@string/help"
+                android:icon="@android:drawable/ic_menu_help"/>
+        </menu>
+    </item>
+    <item
         android:title="@string/administration">
-
-        <menu >
-
+        <menu>
             <item android:id="@+id/downloadButton"
                 android:title="@string/download"
                 android:icon="@drawable/ic_file_download_24dp"/>
@@ -65,30 +71,19 @@
                 android:title="@string/install_zip"
                 android:icon="@drawable/ic_menu_archive"/>
 
-            <item android:id="@+id/settingsButton"
-                android:title="@string/settings"
-                android:icon="@android:drawable/ic_menu_preferences"/>
 
             <item android:id="@+id/manageLabels"
                 android:title="@string/manage_labels"
                 android:icon="@drawable/ic_label_multiple_24dp"/>
 
-            <item android:id="@+id/backupMainMenu"
-                android:title="@string/backup"
-                android:icon="@android:drawable/ic_menu_save">
-                <menu>
-                    <item android:id="@+id/backup"
-                        android:title="@string/backup"
-                        android:icon="@android:drawable/ic_menu_save"/>
-                    <item android:id="@+id/restore"
-                        android:title="@string/restore"
-                        android:icon="@android:drawable/ic_menu_set_as"/>
-                </menu>
-            </item>
+            <item android:id="@+id/settingsButton"
+                android:title="@string/settings"
+                android:icon="@android:drawable/ic_menu_preferences"/>
+
+			<item android:id="@+id/backupMainMenu"
+				  android:title="@string/backup_and_restore"
+				  android:icon="@android:drawable/ic_menu_save"/>
+
         </menu>
     </item>
-
-    <item android:id="@+id/helpButton"
-        android:title="@string/help"
-        android:icon="@android:drawable/ic_menu_help"/>
 </menu>
