Implement nicer action bar for main bible view

--- a/app/src/main/res/layout/maine_bible_title.xml
+++ b/app/src/main/res/layout/maine_bible_title.xml
@@ -16,17 +16,6 @@
 		android:layout_height="fill_parent"
 		android:contentDescription="@string/menu"
 		app:srcCompat="@drawable/ic_menu" />
-	<LinearLayout android:id="@+id/documentTitleContainer"
-              android:layout_width="wrap_content"
-              android:layout_height="fill_parent"
-              android:layout_gravity="center"
-              android:orientation="vertical">
-	    <TextView android:id="@+id/documentTitle"
-	        	  style="@style/ActionBarTitle1"/>
-	    <TextView android:id="@+id/documentSubtitle"
-	        	  style="@style/ActionBarTitle2"/>
-	</LinearLayout>
-	
 	<LinearLayout android:id="@+id/pageTitleContainer"
               android:layout_width="wrap_content"
               android:layout_height="fill_parent"
@@ -34,9 +23,8 @@
               android:orientation="vertical"
               android:layout_marginLeft="5dip">
 	    <TextView android:id="@+id/pageTitle"
-	        	  style="@style/ActionBarTitle1"/>
-	    <TextView android:id="@+id/pageSubtitle"
-	        	  style="@style/ActionBarTitle2"/>
+			style="@style/BibleTitle1"/>
+		<TextView android:id="@+id/documentTitle"
+			style="@style/BibleTitle2"/>
 	</LinearLayout>
-	
 </LinearLayout>
