--- a/app/src/main/res/layout/main_bible_title.xml
+++ b/app/src/main/res/layout/main_bible_title.xml
@@ -19,9 +19,9 @@
 	<LinearLayout android:id="@+id/pageTitleContainer"
               android:layout_width="wrap_content"
               android:layout_height="fill_parent"
-              android:layout_gravity="center"
+              android:layout_gravity="start|center_vertical"
               android:orientation="vertical"
-              android:layout_marginLeft="5dip">
+		>
 	    <TextView android:id="@+id/pageTitle"
 			style="@style/BibleTitle1"/>
 		<TextView android:id="@+id/documentTitle"
