--- a/app/src/main/res/values/barstyles.xml
+++ b/app/src/main/res/values/barstyles.xml
@@ -32,12 +32,12 @@
 
 	<!-- Custom left title text -->
 	<style name="BibleTitle1" parent="ActionBarTitle">
-		<item name="android:textSize">14sp</item>
-		<item name="android:gravity">center|left</item>
+		<item name="android:textSize">15sp</item>
+		<item name="android:gravity">bottom|left</item>
 	</style>
 	<style name="BibleTitle2" parent="ActionBarTitle">
-		<item name="android:gravity">top|left</item>
 		<item name="android:textSize">10sp</item>
+		<item name="android:gravity">top|left</item>
 	</style>
 
 	<!-- Custom left title text -->
