--- a/app/src/main/res/menu/main_bible_drawer_menu.xml
+++ b/app/src/main/res/menu/main_bible_drawer_menu.xml
@@ -25,7 +25,13 @@
                 android:title="@string/chooce_document"
                 android:icon="@drawable/ic_library_books_white_24dp"
                 />
-
+            <item android:id="@+id/searchButton"
+                android:title="@string/search"
+                android:icon="@drawable/ic_search_24dp"
+                />
+            <item android:id="@+id/speakButton"
+                android:title="@string/speak"
+                android:icon="@drawable/ic_hearing_24dp"/>
             <item android:id="@+id/bookmarksButton"
                 android:title="@string/bookmarks"
                 android:icon="@drawable/ic_collections_bookmark_24dp"
@@ -38,11 +44,6 @@
             <item android:id="@+id/dailyReadingPlanButton"
                 android:title="@string/rdg_plan_title"
                 android:icon="@drawable/ic_format_list_numbered_white_24dp"/>
-
-            <item android:id="@+id/speakButton"
-                android:title="@string/speak"
-                android:icon="@drawable/ic_hearing_24dp"/>
-
             <item 	android:id="@+id/historyButton"
                 android:title="@string/history"
                 android:icon="@drawable/ic_history_white_24dp"/>
